Bug 297203 - Botton line position that shows the current cursor file is wrongly calculated
Summary: Botton line position that shows the current cursor file is wrongly calculated
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: folders (other bugs)
Version First Reported In: 2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-31 17:48 UTC by Luiz Angelo De Luca
Modified: 2012-04-03 00:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments
This image shows the misplaced botton bar (21.53 KB, image/png)
2012-03-31 17:49 UTC, Luiz Angelo De Luca
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luiz Angelo De Luca 2012-03-31 17:48:08 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/534.34 (KHTML, like Gecko) rekonq Safari/534.34
Build Identifier: 

Hello,

When I have a long filename, dolphin breaks it in multilines. The problem is with the botton line used to show the current cursor item (the one that changes using ctrl+arrows). The line touches the last line when it uses two lines for the filename and it even cross the text when I have three or more lines.

The screenshot will show it better

Reproducible: Always

Steps to Reproduce:
1.Create a file with long names with blank spaces
2.Open dolphin
3.Select the file
Actual Results:  
4.The line crosses the filename

Expected Results:  
4.The line should always be bellow the filename
Comment 1 Luiz Angelo De Luca 2012-03-31 17:49:51 UTC
Created attachment 70042 [details]
This image shows the misplaced botton bar
Comment 2 Peter Penz 2012-03-31 19:20:55 UTC
Thanks for the report. Could you please check whether starting Dolphin from the konsole with:
dolphin --graphicssystem raster
resolves this issue?
Comment 3 Luiz Angelo De Luca 2012-03-31 20:49:57 UTC
No diference. However, if I change kde fonts, the problem is gone. Maybe I should report this directly to kubuntu?

(In reply to comment #2)
> Thanks for the report. Could you please check whether starting Dolphin from
> the konsole with:
> dolphin --graphicssystem raster
> resolves this issue?
Comment 4 Luiz Angelo De Luca 2012-03-31 21:17:57 UTC
I did some more testing...

In a clean user, the problem is present. If I change the "general font" to other than ubuntu, the problem disapears. If I go back to ubuntu font and change its size to something big (16pt), the problem disapears.
If I go back to the default font size, the problem is back. Maybe it is a problem with ubuntu font or with kde/qt that does not play nice with ubuntu font.

Also, it might be something special in AA settings that kde config cannot handle. If I change anything in AA settings and undo it, it never goes back to normal. The only way to return to the confortable default setup is removing .fonts.conf.
Comment 5 Peter Penz 2012-04-01 08:52:45 UTC
Interesting... I still guess it might be an issue how Dolphin calculates the required height. I'll need to download the KUbuntu font and will check whether I can reproduce this issue. Thanks for your further investigations, this helped to minimize the possible root causes. I'm currently busy with some other tasks but will have a look until the end of next week.
Comment 6 Luiz Angelo De Luca 2012-04-01 21:48:15 UTC
Sure,

Maybe this could help: http://font.ubuntu.com/
Comment 7 Peter Penz 2012-04-02 08:37:19 UTC
I could reproduce the problem with Ubuntu-fonts when using a very small size :-) I'll check during the next days whether it is the fault of Dolphin...
Comment 8 Peter Penz 2012-04-02 20:20:33 UTC
Git commit 1f6887ef11d37f399aede10fd91a92acc0e43c95 by Peter Penz.
Committed on 02/04/2012 at 22:15.
Pushed by ppenz into branch 'master'.

Fix focus-rectangle issues

Assure that the focus-rectangle exactly matches to the bottom of
the rendered text.
Related: bug 289804
FIXED-IN: 4.9.0

M  +42   -25   dolphin/src/kitemviews/kfileitemlistwidget.cpp
M  +1    -0    dolphin/src/kitemviews/kfileitemlistwidget.h
M  +7    -12   dolphin/src/kitemviews/kitemlistwidget.cpp
M  +9    -0    dolphin/src/kitemviews/kitemlistwidget.h

http://commits.kde.org/kde-baseapps/1f6887ef11d37f399aede10fd91a92acc0e43c95
Comment 9 Peter Penz 2012-04-02 20:22:53 UTC
The issue was a little bit more complicated to solve than I thought initially. It seems to work fine but it would be risky to backport this to 4.8.x so it will be released with 4.9.0 where we have beta-test-cycles.
Comment 10 Luiz Angelo De Luca 2012-04-03 00:15:33 UTC
Great! So it wasn't a problem with Ubuntu font?

Maybe (k)ubuntu people would be interested on this bug. However, 12.04 uses 4.8.x. :-(